--- a/style.css
+++ b/style.css
@@ -58,31 +58,33 @@ body {
   transform: translateY(50px);
 }
 
-.container .button {
+.container .action-button {
   width: 70px;
   height: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: transparent;
+  border: none;
   border-radius: 150px;
   margin: 15px;
   cursor: pointer;
   transition: all 400ms ease;
 }
 
-#light-container .button {
+#light-container .action-button {
   box-shadow: -2px -2px 8px rgba(255, 255, 255, 1),
               -2px -2px 12px rgba(255, 255, 255, 0.5),
               inset 2px 2px 4px rgba(255, 255, 255, 0.1),
               2px 2px 8px rgba(0, 0, 0, 0.15);
 }
 
-#dark-container .button {
+#dark-container .action-button {
   box-shadow: #000000 2px 2px 8px, 
               #4d4d4d -2px -2px 8px;
 }
 
-#light-container .button.active {
+#light-container .action-button.active {
   box-shadow: inset -2px -2px 8px rgba(255, 255, 255, 1),
 						  inset -2px -2px 12px rgba(255, 255, 255, 0.5),
 						  inset 2px 2px 4px rgba(255, 255, 255, 0.1),
@@ -90,28 +92,28 @@ body {
   transform: scale(0.95);
 }
 
-#dark-container .button.active {
+#dark-container .action-button.active {
   box-shadow: inset #000000 2px 2px 8px, 
               inset#4d4d4d -2px -2px 8px;
   transform: scale(0.95);
 }
 
-.container .button i {
+.container .action-button i {
   color: #D1D2DA;
   font-size: 30px;
   transition: all 300ms ease;
 }
 
-.container .button.active i {
+.container .action-button.active i {
   font-size: 28px;
 }
 
-#light-container .button.active i {
+#light-container .action-button.active i {
   color: #35E135;
   text-shadow: 0 0 10px #37FF37;
 }
 
-#dark-container .button.active i {
+#dark-container .action-button.active i {
   color: #00A8FF;
   text-shadow: 0 0 10px #15B3FF;
 }
